# MP3Encoder

./: README.md
app/: build.gradle
app/src/androidTest/java/com/cjj/mp3encoder/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mp3_encoder.h  mp3encoder.cpp  native-lib.cpp
app/src/main/cpp/lame/: VbrTag.c  bitstream.c  encoder.c  fft.c  gain_analysis.c  id3tag.c  lame.c  newmdct.c  presets.c  psymodel.c  quantize.c  quantize_pvt.c  reservoir.c  set_get.c  tables.c  takehiro.c  util.c  vbrquantize.c  version.c
app/src/main/java/com/cjj/mp3encoder/: JniManager.java  MainActivity.java
app/src/test/java/com/cjj/mp3encoder/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
